ownership/tests/will_not_compile/value_must_not_have_more_than_one_owner.rs
fn main() {
    let a = String::from("Hello World!");
    let b = a; //variable b now owns the value
    println!("a = {a}"); //a is no longer valid
}
